--- a/_includes/important.html
+++ b/_includes/important.html
@@ -1,5 +1,4 @@
 <div class="aside-important">
-    <b> Important: </b>
-    {{ include.content }}
-
+    {% capture mdcontent %}__{{include.title | default: "Important:"}}__ {{include.content}}{% endcapture %}
+    {{ mdcontent | markdownify}}
 </div>
