--- a/_includes/note.html
+++ b/_includes/note.html
@@ -1,5 +1,4 @@
 <div class="aside-note">
-    <b> Note: </b>
-    {{ include.content }}
-
+    {% capture mdcontent %}__{{include.title | default: "Note:"}}__ {{include.content}}{% endcapture %}
+    {{ mdcontent | markdownify}}
 </div>
