Add: explore page for listing community projects. Includes categories and search functionality.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,12 @@ h3 {
   /* color: #54a23d; */
 }
 
+/* Mark new-window links */
+a[target="_blank"]:after {
+  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
+  margin: 0 3px 0 5px;
+}
+
 blockquote {
   border-left: 5px solid #eeeeee;
   margin-left: 0;
@@ -82,6 +88,26 @@ pre {
     margin: 0 auto;
     width: 90%;
     max-width: 1200px;
+  }
+}
+
+.container-flex{
+  margin: 0 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-flex {
+  /* display: table-cell; */
+  flex: 45%;
+  padding-left: 10px;
+  vertical-align: top;
+}
+
+@media screen and (max-width: 700px) {
+  .col-flex {
+    flex: 100%;
+    flex-direction: column; 
   }
 }
 
@@ -231,6 +257,30 @@ pre {
   width: 100%;
 }
 
+.search-btn {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #3c92d1;
+  color: #fff;
+  font-family: 'Lato', sans-serif;
+  border-radius: 4px;
+  padding: 5px 7px;
+}
+
+.search-btn:hover {
+  background-color: #3889c4;
+  color: white;
+}
+
+.search-box {
+  width: 85%;
+  padding: 5px 7px;
+  color: #777;
+  font-weight: bold;
+}
+
+
 footer .container {
   border-top: solid 1px #ececec;
   padding: 20px 0 50px;
@@ -292,4 +342,10 @@ footer a {
   padding-left: 10px;
   margin: 20px 0;
   background-color: #f9f2f4;
+}
+
+.projects-table td{
+
+  padding: 4px;
+
 }
