--- a/_includes/news_sidebar.html
+++ b/_includes/news_sidebar.html
@@ -1,8 +1,17 @@
 <div class="col-narrow">
   <h3>News</h3>
-  <p>
-  Find more updates in the <a href="/news/archive/">news archive</a>.
-  </p>
+  
+    <table>
+    {% assign posts_to_show = 5 %}
+    {% for post in site.posts limit:posts_to_show %}
+      <tr>
+        <td><a href="{{ post.url }}">{{ post.title }}</a>&nbsp;&nbsp; </td>
+        <td style="white-space: nowrap; text-align: right">{{ post.date | date:"%d %b %Y" }}</td>
+      </tr>
+      {% comment %} <dd></dd> {% endcomment %}
+    {% endfor %}
+    </table>
+    <p><a href="/news/archive">More…</a></p>
 
   {% include what_is_fortran.html %}
 
