Fix: navbar highlighting and sign-posting
Fixes #39
Compilers and Learn section are now highlighting correctly.
The newsletters have been switched to using the 'post' layout so that 'News' is highlighted in the navbar.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include nav.html %}
+{% include nav.html active=page.navbar %}
 
 <section class="front-section">
   <div class="container">
