--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,22 @@
 layout: default
 ---
 
-{% include nav.html %}
+{% include nav.html active="News" %}
 
 <section class="front-section">
   <div class="container">
     <div class="newsletter col-wide">
 
+      <a href="/news" > < Back to news</a>
+
       <h1>{{ page.title }}</h1>
 
       <div style="margin-top: 0.5em; margin-bottom: 0.5em;">
-        <i>{{ page.date | date: "%B %d, %Y" }}</i>
+        <p><i>{{ page.date | date: "%B %d, %Y" }}</i></p>
+        {% if page.author != null %}
+          <p><b>Authors:</b> {{ page.author }}</p>
+        {% endif %}
       </div>
-
-      <h2>{{ page.author }}</h2>
 
       {{ content }}
 
