--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -93,9 +93,9 @@ layout: default
       <div class="col-wide">
         <!-- <h2 id="faqs">FAQ</h2> -->
         
-        Want your project listed or see a problem? Submit an issue
-        <a href="https://github.com/fortran-lang/fortran-lang.github.io/issues" target="_blank">
-          <i class="devicon-github-plain colored"></i> here</a>.
+        See
+	  <a href="https://github.com/fortran-lang/fortran-lang.github.io/blob/master/PACKAGES.md" target="_blank">
+      <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
   
     </div>
   </section>
