Add: baseurl to html links
This is required for when the site is built with a different base url.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,10 +5,10 @@
 	    <div class="navbar-header">
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
 		    <span class="sr-only">Toggle navigation</span>
-		    <img src="/assets/img/icons/icon-menu.svg" alt="Toggle navigation" class="navbar-top-align">
+		    <img src="{{ site.baseurl }}/assets/img/icons/icon-menu.svg" alt="Toggle navigation" class="navbar-top-align">
 		</button>
-		<a href="/" class="navbar-brand">
-		    <img src="/assets/img/fortran_logo_256x256.png" id="navbar-logo" alt="Fortran">
+		<a href="{{ site.baseurl }}/" class="navbar-brand">
+		    <img src="{{ site.baseurl }}/assets/img/fortran_logo_256x256.png" id="navbar-logo" alt="Fortran">
 		</a>
 	    </div>
 	    <div class="collapse navbar-collapse navbar-top-align" id="menu">
@@ -19,12 +19,12 @@
 		    {% else %}
 		    <li>
 		    {% endif %}
-		    <a {% if nav.sections != null %}href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"{% else %}href="{{ nav.url }}"{% endif %}>{{ nav.title }}</a>
+		    <a {% if nav.sections != null %}href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"{% else %}href="{{ site.baseurl }}{{ nav.url }}"{% endif %}>{{ nav.title }}</a>
 		    {% if nav.sections != null %}
 			<ul class="dropdown-menu">
 			{% for section in nav.sections %}
 			    <li>
-				<a href="{{ section.url }}">{{ section.title }}</a>
+				<a href="{{ site.baseurl }}{{ section.url }}">{{ section.title }}</a>
 			    </li>
 			{% endfor %}
 			</ul>
