--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   <div class="container">
     <div class="newsletter col-wide">
 
-      <a href="/news" > < Back to news</a>
+      <a href="{{ site.baseurl }}/news" > < Back to news</a>
 
       <h1>{{ page.title }}</h1>
 
