--- a/_includes/news_sidebar.html
+++ b/_includes/news_sidebar.html
@@ -5,13 +5,13 @@
     {% assign posts_to_show = 5 %}
     {% for post in site.posts limit:posts_to_show %}
       <tr>
-        <td><a href="{{ post.url }}">{{ post.title }}</a>&nbsp;&nbsp; </td>
+        <td><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>&nbsp;&nbsp; </td>
         <td style="white-space: nowrap; text-align: right">{{ post.date | date:"%d %b %Y" }}</td>
       </tr>
       {% comment %} <dd></dd> {% endcomment %}
     {% endfor %}
     </table>
-    <p><a href="/news/archive">More…</a></p>
+    <p><a href="{{ site.baseurl }}/news/archive">More…</a></p>
 
   {% include what_is_fortran.html %}
 
@@ -20,6 +20,6 @@
 
   <h3>RSS</h3>
   <p>
-  RSS clients can follow the <a href="{{ site.news.feed }}">RSS feed</a>.
+  RSS clients can follow the <a href="{{ site.baseurl }}{{ site.news.feed }}">RSS feed</a>.
   </p>
 </div>
