add mailing list to the landing page and news sidebar

--- a/_includes/news_sidebar.html
+++ b/_includes/news_sidebar.html
@@ -15,11 +15,10 @@
 
   {% include what_is_fortran.html %}
 
-  <h3>Twitter</h3>
+  {% include mailing_list.html %}
+
   {% include twitter.html %}
 
-  <h3>RSS</h3>
-  <p>
-  RSS clients can follow the <a href="{{ site.news.feed }}">RSS feed</a>.
-  </p>
+  {% include rss_feed.html %}
+
 </div>
