Add: preview banner to preview builds. When a PR preview is built, a banner is appended to nav.html to indicate preview build with link to github pull request.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,17 @@
 <header class="navbar">
+	{% if site.pull_request %}
+	<section class="front-section shaded purple"><div class="container">
+		
+		<h3>
+		<i data-feather="git-pull-request"></i>
+		<b>Site preview: </b>you are previewing unpublished changes for
+		
+		<a href="https://github.com/fortran-lang/fortran-lang.github.io/pull/{{site.pull_request}}" target="_blank">
+			<i class="devicon-github-plain colored"></i>
+			pull request {{site.pull_request}}</a>
+		</h3>
+	</div></section>
+	{% endif %} 
     <div class="container">
         <nav class="navbar">
 	    <div class="container-fluid">
