--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,6 +222,11 @@ pre {
   background-color: #f4f4f4;
 }
 
+.front-section.shaded.purple {
+  background-color: #f2eef6;
+}
+
+
 .faqs dt {
   font-weight: 700;
 }
