Update: rss_feed include with site.baseurl

--- a/_includes/rss_feed.html
+++ b/_includes/rss_feed.html
@@ -1,3 +1,3 @@
 
 <h3>RSS feed</h3>
-<p>RSS clients can follow the <a href="{{ site.news.feed }}">RSS feed</a>.</p>
+<p>RSS clients can follow the <a href="{{site.baseurl}}{{ site.news.feed }}">RSS feed</a>.</p>
