Revert "Github actions build & PR preview"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-wide">
     {% for nav in site.data.nav %}
-      <a href="{{ site.baseurl }}{{ nav.url }}">{{ nav.title }}</a>
+      <a href="{{ nav.url }}">{{ nav.title }}</a>
       {% unless forloop.last %}
         &middot;
       {% endunless %}
