add discourse badge to landing page and sidebar

--- a/_includes/news_sidebar.html
+++ b/_includes/news_sidebar.html
@@ -17,6 +17,8 @@
 
   {% include mailing_list.html %}
 
+  {% include discourse.html %}
+
   {% include twitter.html %}
 
   {% include rss_feed.html %}
