Draft navigation structure for tutorials
Setup a data structure and layouts for navigating pages in the learn section.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,6 +203,35 @@ pre {
   }
 }
 
+.col-right,
+.col-fixed {
+  display: block;
+}
+
+@media (min-width: 568px) {
+  .col-right {
+    /* display: table-cell; */
+    width: 61.8%;
+    vertical-align: top;
+    margin-left: 380px;
+    min-height: 500px;
+  }
+  .col-fixed {
+    /* display: table-cell; */
+    position: fixed;
+    width: 350px;
+    height: 500px;
+    z-index: 1; /* Stay on top */
+  }
+  .col-fixed .content{
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 90%;
+    width: 100%;
+  }
+}
+
+
 .front-section {
   padding: 8px 0;
 }
