Add: social icon links to navbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,20 @@ a[target="_blank"]:after {
   margin: 0 3px 0 5px;
 }
 
+/* " except in the navbar */
+.navbar a[target="_blank"]:after {
+  content:'';
+  margin: 0px;
+}
+
+/* Hide text for social navbar icons 
+    if not on mobile device*/
+@media (min-width: 758px) {
+  .navbar .icon-link{
+    display: none;
+  }
+}
+
 blockquote {
   border-left: 5px solid #eeeeee;
   margin-left: 0;
