--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/syntax.css" rel="stylesheet">
     <link rel="canonical" href="{{ site.url }}{% if page.canonical_url %}{{ page.canonical_url }}{% else %}{{ page.url }}{% endif %}" />
+    <script src="https://kit.fontawesome.com/8d17d4fe97.js" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
