Update: news sidebar
Remove social links from sidebar and add twitter feed.
Also add some nice icons from the new icon pack.

--- a/_includes/discourse.html
+++ b/_includes/discourse.html
@@ -1,5 +1,5 @@
+<h3><i class="fab fa-discourse"></i> Discourse</h3>
 <p>
-<a href="https://fortran-lang.discourse.group">
-<img border="0" alt="Discourse" src="/assets/img/discourse.png" width="200"></img>
-</a>
+    Join the discussion about all things Fortran on the 
+    <a href="https://fortran-lang.discourse.group" target="_blank">fortran-lang discourse.</a>
 </p>
