--- a/_includes/news_sidebar.html
+++ b/_includes/news_sidebar.html
@@ -1,5 +1,5 @@
 <div class="col-narrow">
-  <h3>News</h3>
+  <h3><i class="far fa-newspaper"></i> News</h3>
   
     <table>
     {% assign posts_to_show = 5 %}
@@ -11,9 +11,15 @@
       {% comment %} <dd></dd> {% endcomment %}
     {% endfor %}
     </table>
-    <p><a href="{{ site.baseurl }}/news/archive">More…</a></p>
+    <p><a href="{{ site.baseurl }}/news">More…</a></p>
 
-  {% include what_is_fortran.html %}
+  </br>
+
+
+    <a class="twitter-timeline" data-height="500" href="https://twitter.com/fortranlang?ref_src=twsrc%5Etfw"></a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <!-- {% include what_is_fortran.html %}
 
   {% include mailing_list.html %}
 
@@ -21,6 +27,6 @@
 
   {% include twitter.html %}
 
-  {% include rss_feed.html %}
+  {% include rss_feed.html %} -->
 
 </div>
