--- a/_includes/twitter.html
+++ b/_includes/twitter.html
@@ -1,4 +1,4 @@
-<h3>Twitter</h3>
+<h3><i class="fab fa-twitter"></i> Twitter</h3>
 
 <a href="https://twitter.com/fortranlang" class="twitter-follow-button" data-show-count="true" data-size="large">@fortranlang</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
