--- a/_includes/rss_feed.html
+++ b/_includes/rss_feed.html
@@ -1,3 +1,3 @@
 
-<h3>RSS feed</h3>
-<p>RSS clients can follow the <a href="{{site.baseurl}}{{ site.news.feed }}">RSS feed</a>.</p>
+<h3><i class="fas fa-rss"></i> RSS feed</h3>
+<p>RSS clients can follow the <a href="{{site.baseurl}}{{ site.news.feed }}" target="_blank">RSS feed</a>.</p>
