Minor update: always highlight Learn in book layout. This simplifies the jekyll headers in the mini-books.

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include nav.html active=page.navbar %}
+{% include nav.html active="Learn" %}
 
 <section class="front-section">
   <div class="container">
