Add: initial working contributor list
Reads github_stats json files and produces list of contributors
and plots which can be filtered by repository and date window.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,6 +101,11 @@ a[target="_blank"]:after {
   margin: 0px;
 }
 
+.hidenewwindow[target="_blank"]:after {
+  content:'';
+  margin: 0px;
+}
+
 /* Hide text for social navbar icons 
     if not on mobile device*/
 @media (min-width: 758px) {
@@ -157,6 +162,16 @@ pre {
   flex: 45%;
   padding-left: 10px;
   vertical-align: top;
+}
+
+.col-flex.contributor {
+  /* display: table-cell; */
+  flex: 30%;
+  margin: 10px;
+  padding: 10px;
+  vertical-align: top;
+  border-radius: 10px;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 700px) {
@@ -243,6 +258,7 @@ pre {
 .col-wide,
 .col-narrow {
   display: block;
+  padding: 10px 0px;
 }
 @media (min-width: 568px) {
   .col-wide {
