--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/github-activity-0.1.5/github-activity-0.1.5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js" integrity="sha256-TQq84xX6vkwR0Qs1qH5ADkP+MvH0W+9E7TdHJsoIQiM=" crossorigin="anonymous"></script>
-    <script src="{{ site.baseurl }}/assets/js/fortranlang.js"></script>
     
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -38,8 +37,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
     {% include google_analytics.html %}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/fortranlang.js"></script>
     <script src="{{ site.baseurl }}/assets/js/page_nav.js"></script>
     <script src="{{ site.baseurl }}/assets/js/gh-contributors.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/package_search.js"></script>
     <script>
       feather.replace()
     </script>
