Update: packages page without community projects
Restructures the package page without the community projects, which have moved to community page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
     <script src="{{ site.baseurl }}/assets/js/page_nav.js"></script>
     <script src="{{ site.baseurl }}/assets/js/gh-contributors.js"></script>
     <script src="{{ site.baseurl }}/assets/js/package_search.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/package_tags.js"></script>
     <script>
       feather.replace()
     </script>
