--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+---
+layout: null
+---
+
 * {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -257,6 +261,19 @@ pre {
   }
 }
 
+.col-center {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+}
+@media (min-width: 568px) {
+  .col-center {
+    display: block;
+    margin: 0 auto;
+    width: 60%;
+  }
+}
+
 .col-wide,
 .col-narrow {
   display: block;
@@ -364,25 +381,32 @@ pre {
   width: 100%;
 }
 
+.search-form {
+  width: 100%;
+  position: relative;
+  padding: 15px;
+}
+
 .search-btn {
   display: inline-block;
   text-align: center;
   vertical-align: middle;
-  background-color: #3c92d1;
-  color: #fff;
-  font-family: 'Lato', sans-serif;
-  border-radius: 4px;
+  background-image: url('{{site.baseurl}}/assets/img/search.svg');
+  background-repeat: no-repeat;
+  background-color: transparent;
   padding: 5px 7px;
-}
-
-.search-btn:hover {
-  background-color: #3889c4;
-  color: white;
+  position: absolute;
+  right: 20px;
+  border: 0px;
+  width: 33px;
+  margin-top: 10px;
 }
 
 .search-box {
-  width: 85%;
-  padding: 5px 7px;
+  /* width: 85%; */
+  padding: 10px 50px 10px 10px;
+  width: 100%;
+  /* padding: 0 auto; */
   color: #777;
   font-weight: bold;
 }
