--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -33,14 +33,14 @@ layout: default
                 {{ project.name }}</a></h3> </td>
               <td> {% if project.version %}
                   {% if project.version != 'none' %}
-                  <img src="https://img.shields.io/badge/Version-{{ project.version | replace: " ", "%20" | replace: "-", "--" }}-green.svg">
+                  <img src="https://img.shields.io/badge/version-{{ project.version | replace: " ", "%20" | replace: "-", "--" }}-green.svg">
                   {% endif%}
                   {% else %}
                   <img src="https://img.shields.io/github/v/release/{{ project.github }}?color=green">
               {% endif %}</td>
               <td> {% if project.license %}
                    {% if project.license != 'none' %}
-                   <img src="https://img.shields.io/badge/License-{{ project.license | replace: " ", "%20" | replace: "-", "--" }}-green">
+                   <img src="https://img.shields.io/badge/license-{{ project.license | replace: " ", "%20" | replace: "-", "--" }}-green">
                    {% endif%}
                    {% else %}
                    <img src="https://img.shields.io/github/license/{{ project.github }}">
@@ -59,11 +59,11 @@ layout: default
                 {% endif %}
                 {{ project.name }}</a></h3> </td>
               <td> {% if project.version %}
-                  <img src="https://img.shields.io/badge/Version-{{ project.version | replace: " ", "%20" | replace: "-", "--" }}-green.svg">
+                  <img src="https://img.shields.io/badge/version-{{ project.version | replace: " ", "%20" | replace: "-", "--" }}-green.svg">
                   {% endif %}
               </td>
               <td> {% if project.license %}
-                  <img src="https://img.shields.io/badge/License-{{ project.license | replace: " ", "%20" | replace: "-", "--" }}-green">
+                  <img src="https://img.shields.io/badge/license-{{ project.license | replace: " ", "%20" | replace: "-", "--" }}-green">
                   {% endif %}
               </td>
               <td></td>
