Rename all instances of fortran-lang.github.io to fortran-lang.org

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 		<i data-feather="git-pull-request"></i>
 		<b>Site preview: </b>you are previewing unpublished changes for
 		
-		<a href="https://github.com/fortran-lang/fortran-lang.github.io/pull/{{site.pull_request}}" target="_blank">
+		<a href="https://github.com/fortran-lang/fortran-lang.org/pull/{{site.pull_request}}" target="_blank">
 			<i class="devicon-github-plain colored"></i>
 			pull request {{site.pull_request}}</a>
 		</h3>
