--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -94,7 +94,7 @@ layout: default
         <!-- <h2 id="faqs">FAQ</h2> -->
         
         See
-	  <a href="https://github.com/fortran-lang/fortran-lang.github.io/blob/master/PACKAGES.md" target="_blank">
+	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
       <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
   
     </div>
