--- a/_includes/discourse.html
+++ b/_includes/discourse.html
@@ -1,5 +1,4 @@
 <h3><i class="fab fa-discourse"></i> Discourse</h3>
 <p>
-    Join the discussion about all things Fortran on the 
-    <a href="https://fortran-lang.discourse.group" target="_blank">fortran-lang discourse.</a>
+    {% t global.join_discourse %}
 </p>
