--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -2,18 +2,19 @@
 layout: default
 ---
 
-{% include nav.html active='Packages' %}
+{% capture active %}{% t nav_key.packages %}{% endcapture %}
+{% include nav.html active=active %}
 
 <section class="masthead">
-    <h1>Featured Open Source Projects</h1>
-    <h3>A rich ecosystem of high-performance code</h3>
+    <h1>{% t packages.featured %}</h1>
+    <h3>{% t packages.tagline %}</h3>
   </section>
   
   <section class="front-section">
     <div class="container">
       <div class="col-wide">
         
-          <h2> <a href='{{ site.baseurl }}/packages'> Packages</a> / 
+         <h2> <a href='{{ site.baseurl }}/packages'> {% t nav_key.packages %}</a> / 
             {% if page.feather-icon %}
             <i data-feather="{{ page.feather-icon }}"></i>
             {% endif %}
@@ -92,10 +93,8 @@ layout: default
     <div class="container">
       <div class="col-wide">
         <!-- <h2 id="faqs">FAQ</h2> -->
-        
-        See
-	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
-      <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
+
+        {% t packages.footer_text %}
   
     </div>
   </section>
