--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
       <div style="margin-top: 0.5em; margin-bottom: 0.5em;">
         <i>{{ page.date | date: "%B %d, %Y" }}</i>
         {% if page.author != null %}
-          <p><i>Authors:</i> {{ page.author }}</p>
+          <p><i>{% t news.authors %}</i> {{ page.author }}</p>
         {% endif %}
       </div>
 
