--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
-    <div class="col-wide">
-    {% for nav in site.data.nav %}
+    <div class="col-narrow">
+    {% for nav in site.translations[site.lang].nav %}
       <a href="{{ site.baseurl }}{{ nav.url }}">{{ nav.title }}</a>
       {% unless forloop.last %}
         &middot;
@@ -10,7 +10,20 @@
     </div>
 
     <div class="col-narrow">
-      This site's source is <a href="https://github.com/fortran-lang/fortran-lang.org/">hosted on GitHub</a>.
+    {% for lang in site.languages %}
+      {% if lang == site.default_lang and site.default_locale_in_subfolder != true %}
+      <a href="{{ site.baseurl_root }}{{ page.url }}">{% t langs.{{ lang }} %}</a>
+      {% else %}
+      <a href="{{ site.baseurl_root }}/{{ lang }}{{ page.url }}">{% t langs.{{ lang }} %}</a>
+      {% endif %}
+      {% unless forloop.last %}
+        &middot;
+      {% endunless %}
+    {% endfor %}
+    </div>
+
+    <div class="col-narrow">
+      {% t global.hosted_on_github %}
     </div>
   </div>
 </footer>
