--- a/_includes/mailing_list.html
+++ b/_includes/mailing_list.html
@@ -1,6 +1,3 @@
-<h3> <i class="fas fa-envelope-open-text"></i> Mailing list</h3>
+<h3> <i class="fas fa-envelope-open-text"></i> {% t global.mailing_list %}</h3>
 
-<p>Subscribe to our <a href="https://groups.io/g/fortran-lang" target="_blank">mailing list</a>
-to discuss anything Fortran related, announce Fortran projects, discuss development
-of core fortran-lang.org projects (stdlib, fpm), and get
-the latest news.</p>
+<p>{% t global.subscribe_to_mailing_list %}</p>
