--- a/_includes/note.html
+++ b/_includes/note.html
@@ -1,4 +1,5 @@
 <div class="aside-note">
-    {% capture mdcontent %}__{{include.title | default: "Note:"}}__ {{include.content}}{% endcapture %}
+    {% capture default_title %}{% t book.note %}:{% endcapture %}
+    {% capture mdcontent %}__{{include.title | default: default_title}}__ {{include.content}}{% endcapture %}
     {{ mdcontent | markdownify}}
 </div>
