--- a/_includes/tip.html
+++ b/_includes/tip.html
@@ -1,4 +1,5 @@
 <div class="aside-tip">
-    {% capture mdcontent %}__{{include.title | default: "Tip:"}}__ {{include.content}}{% endcapture %}
+    {% capture default_title %}{% t book.tip %}:{% endcapture %}
+    {% capture mdcontent %}__{{include.title | default: default_title}}__ {{include.content}}{% endcapture %}
     {{ mdcontent | markdownify}}
 </div>
