--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -77,7 +77,7 @@ layout: default
               {{ project.description }}
           </td></tr>
           <tr><td colspan="7" class="light small">
-            <b>Tags: </b>{{ project.tags }}
+          <b>{% t packages.tags %}: </b>{{ project.tags }}
         </td></tr>
           <tr><td colspan="7"></td></tr>
           {% endfor %} 
