--- a/_includes/rss_feed.html
+++ b/_includes/rss_feed.html
@@ -1,3 +1,3 @@
 
 <h3><i class="fas fa-rss"></i> {% t global.rss_feed %}</h3>
-<p>RSS clients can follow the <a href="{{site.baseurl}}{{ site.news.feed }}" target="_blank">RSS feed</a>.</p>
+<p>{% t global.rss_client %}</p>
