Separate content from markup for other subpages as well

--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -94,7 +94,7 @@ layout: default
       <div class="col-wide">
         <!-- <h2 id="faqs">FAQ</h2> -->
 
-        {% t packages.footer_text %}
+        {% tf packages/footer_text.html %}
   
     </div>
   </section>
