Localize page titles

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,10 +18,10 @@
 	    <div class="navbar-header">
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
          <span class="sr-only">{% t global.toogle_nav %}</span>
-		    <img src="{{ site.baseurl }}/assets/img/icons/icon-menu.svg" alt="Toggle navigation" class="navbar-top-align">
+		    <img src="{{ site.baseurl_root }}/assets/img/icons/icon-menu.svg" alt="Toggle navigation" class="navbar-top-align">
 		</button>
 		<a href="{{ site.baseurl }}/" class="navbar-brand">
-		    <img src="{{ site.baseurl }}/assets/img/fortran_logo_256x256.png" id="navbar-logo" alt="Fortran">
+		    <img src="{{ site.baseurl_root }}/assets/img/fortran_logo_256x256.png" id="navbar-logo" alt="Fortran">
 		</a>
 	    </div>
 	    <div class="collapse navbar-collapse navbar-top-align" id="menu">
