--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -18,7 +18,7 @@ layout: default
             {% if page.feather-icon %}
             <i data-feather="{{ page.feather-icon }}"></i>
             {% endif %}
-            {{page.title}}</h2>
+            {% t page.title %}</h2>
           <h3>
               {{page.description}}
           </h3>
