--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
   <div class="container">
     <div class="newsletter col-wide">
 
-      <h1>{{ page.title }}</h1>
+      <h1>{% t page.title %}</h1>
 
       <div style="margin-top: 0.5em; margin-bottom: 0.5em;">
         <i>{{ page.date | date: "%B %d, %Y" }}</i>
