Fix typo in site preview header...

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 		
 		<h3>
 		<i data-feather="git-pull-request"></i>
-      <b>{% t global.side_preview %}: </b> {% t global.side_preview_info %}
+      <b>{% t global.site_preview %}: </b> {% t global.site_preview_info %}
 		
 		<a href="https://github.com/fortran-lang/fortran-lang.org/pull/{{site.pull_request}}" target="_blank">
 			<i class="devicon-github-plain colored"></i>
