--- a/_includes/discourse.html
+++ b/_includes/discourse.html
@@ -1,4 +1,4 @@
-<h3><i class="fab fa-discourse"></i> Discourse</h3>
+<h3><i class="fab fa-discourse"></i> {% t global.discourse %}</h3>
 <p>
     {% t global.join_discourse %}
 </p>
