Localize page description in code categories

--- a/_layouts/code_category.html
+++ b/_layouts/code_category.html
@@ -20,7 +20,7 @@ layout: default
             {% endif %}
             {% t page.title %}</h2>
           <h3>
-              {{page.description}}
+              {% t page.description %}
           </h3>
   
           <table class="projects-table">
