Symlink posts from English to French and Spanish subpage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
       </p>
       <p>
       {% for lang in site.languages %}
-        {% assign this_lang = site.translations[lang].langs[lang] %}
+        {% assign this_lang = site.data.langs[lang] %}
         {% if lang == site.default_lang and site.default_locale_in_subfolder != true %}
         <a href="{{ site.baseurl_root }}{{ page.url }}">{{ this_lang }}</a>
         {% else %}
