--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -73,17 +73,18 @@
   
   
   a:visited {
-      color: #734f96;
+      color: white;
   }
   
   a:link {
-      color: #3c92d1;
+      color: white;
   }
   
   a:hover {
       text-decoration: underline;
-      color: #222222;
+      color: white;
   }
+  
   
   div.col-12.col-md-3.bd-sidebar {
       max-width: 12em;
@@ -101,3 +102,24 @@
   .toctree-l1.nav-item {
       padding-right: 1em;
   }
+
+  .btn {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #3889c4;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    border-radius: 4px;
+    padding: 15px 30px;
+  }
+  
+  .btn:hover {
+    background-color: #3889c4;
+    color: white;
+  }
+  
+  .btn.full-width {
+    width: 100%;
+  }
+  
