--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -70,21 +70,7 @@
   span.newsdate {
       float: right;
   }
-  
-  
-  a:visited {
-      color: white;
-  }
-  
-  a:link {
-      color: white;
-  }
-  
-  a:hover {
-      text-decoration: underline;
-      color: white;
-  }
-  
+
   
   div.col-12.col-md-3.bd-sidebar {
       max-width: 12em;
@@ -122,4 +108,11 @@
   .btn.full-width {
     width: 100%;
   }
-  
+  .get_started {
+      color:white;
+
+  }
+  .fortran_sidebar {
+    min-width:min-content;
+    background-color:white;
+}
