minor bug fix for mobile version.

--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -43,3 +43,23 @@
     --sd-color-tabs-underline: rgb(222, 222, 222);
     --sd-fontsize-tabs-label: 1rem
 }
+
+.index_joinus_mobile {
+    visibility: hidden;
+    display: none;
+  }
+
+@media screen and (max-width: 600px) {
+    .index_joinus {
+      visibility: hidden;
+      clear: both;
+      float: left;
+      margin: 10px auto 5px 20px;
+      width: 28%;
+      display: none;
+    }
+    .index_joinus_mobile {
+        visibility: visible;
+        display: inline;
+      }
+  }
