design enhancements and changes

--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -49,6 +49,9 @@
     display: none;
   }
 
+h1 {
+    color: #734f96;
+  }
 @media screen and (max-width: 600px) {
     .index_joinus {
       visibility: hidden;
