--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,6 +12,12 @@
 		</h3>
 	</div></section>
 	{% endif %} 
+	<section class="front-section shaded purple"><div class="container">
+		
+		<h5>
+		Please target the new repository at https://github.com/fortran-lang/webpage for any new submissions for the package index. See #415 for details on the migration.
+		</h5>
+	</div></section>
     <div class="container">
         <nav class="navbar">
 	    <div class="container-fluid">
