--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
 	<section class="front-section shaded purple"><div class="container">
 		
 		<h5>
-		We will be migrating to a new webpage soon. Pkease checkout issue <a href="https://github.com/fortran-lang/fortran-lang.org/issue/415" target="_blank">#415</a> and the <a href="https://github.com/fortran-lang/webpage" target="_blank">new repository</a> for details on the migration.
+		We will be migrating to a new webpage soon. Please checkout issue <a href="https://github.com/fortran-lang/fortran-lang.org/issue/415" target="_blank">#415</a> and the <a href="https://github.com/fortran-lang/webpage" target="_blank">new repository</a> for details on the migration.
 		</h5>
 	</div></section>
     <div class="container">
