--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,9 +14,9 @@
 	{% endif %} 
 	<section class="front-section shaded purple"><div class="container">
 		
-		<h5>
-		We will be migrating to a new webpage soon. Please checkout issue <a href="https://github.com/fortran-lang/fortran-lang.org/issue/415" target="_blank">#415</a> and the <a href="https://github.com/fortran-lang/webpage" target="_blank">new repository</a> for details on the migration.
-		</h5>
+		<h4>
+		We will be migrating to a new webpage soon. Please checkout issue <a href="https://github.com/fortran-lang/fortran-lang.org/issues/415" target="_blank">#415</a> and the <a href="https://github.com/fortran-lang/webpage" target="_blank">new repository</a> for details on the migration.
+		</h4>
 	</div></section>
     <div class="container">
         <nav class="navbar">
